2014-09-29  Rob Savoye  <rob.savoye@linaro.org>

	* lib/ssh.exp: major improvements to use persistent connections.

2014-09-10  Rob Savoye  <rob.savoye@linaro.org>

	* config/aarch64-fv8.exp: Fix big endian flag to the model.

2014-08-26  Rob Savoye  <rob.savoye@linaro.org>

	* lib/rsh.exp: Set RSH and RCP globally.
	* lib/ssh.exp: Minor cleanup.
	* Makefile.am: Install new SSH and Docker library files.
	* Makefile.in: Regenerated.
	* baseboardS/arm-linux.exp: Use new SSH protocol.
	* config/aarch64-fv8.exp: Set the timeout to 6000.
	* lib/remote.exp: Load ssh.exp.

2014-08-08  Rob Savoye  <rob.savoye@linaro.org>

	* lib/ssh.exp: Fork rsh.exp into an SSH only version, leaving
	rsh.exp for now till people switch over. This uses ControlMaster
	and ControlPersist for better performance.

2014-08-06  Rob Savoye  <rob.savoye@linaro.org>

	* config/fastssh.exp: Use zssh instead of ssh, so files can be
	downloaded.
	(fastssh_open): Change directory to /tmp here, so it's only done
	once per session. Yes, this assumes all downloads are going in
	/tmp.
	(fastssh_download): ook for Bytes Sent during a transfer, to avoid
	bogus timeouts.

2014-08-04  Rob Savoye  <rob.savoye@linaro.org>

	* config/aarch64-fv8.exp: Use the Tcl exec instead of local_exec,
	which keeps messing up the output of od. This fixes the endian
	test.

2014-07-16  Rob Savoye  <rob.savoye@linaro.org>

	* runtest.exp: Make the "Searching for" message only printed for
	verbosity over 1. Too much noise.

	* lib/rsh.exp: Also look for rsh_opts in board_info. Don't use cat
	for rsh_exec as it hangs with ControlMaster, and rm -f has no
	output anyway, so we don't care.

2014-07-15  Rob Savoye  <rob.savoye@linaro.org>

	* config/fastssh.exp: Wrapper for rsh.exp that uses ControlMaster
	and ControlPath to mutiplex SSH connections. It's a config file
	instead of a library or baseboard as only config files execute the
	_close proc, which we use to delete the SSH socket to prevent
	trouble.
